# bchs

./: .gitmodules  README.md
lab_ha/verify/: CMakeLists.txt  main.cpp
lab_ha/verify/res/: resources.qrc
lab_ha/verify/src/: CMakeLists.txt  appWindowHA.cpp  appWindowHA.h  haLabMain.cpp  haLabMain.h  labDataInputHA.h  labDataTypesHA.h  labSolverHA.cpp  labSolverHA.h
lab_os/verify/: CMakeLists.txt  main.cpp  resources.qrc
lab_os/verify/res/: resources.qrc
lab_os/verify/src/: CMakeLists.txt  appWindow.cpp  appWindow.h  customTableDelegate.cpp  customTableDelegate.h  gasExplosionCalc.cpp  gasExplosionCalc.h  latexTextBuilder.cpp  latexTextBuilder.h
lab_vz/verify/: CMakeLists.txt  main.cpp
lab_vz/verify/src/: CMakeLists.txt  appWindow.cpp  appWindow.h  customTableDelegate.cpp  customTableDelegate.h  labDataInput.h  labDataTypes.h  labSolver.cpp  labSolver.h  texBuilder.cpp  texBuilder.h
